fix spacing and move theme button to header

--- a/index.css
+++ b/index.css
@@ -228,7 +228,7 @@
 
 /*section2*/
 body{
-    background-color: rgb(248, 231, 203);
+    background-color: rgb(251, 239, 219);
 }
 .cards {
     display: flex;
@@ -363,19 +363,25 @@ video{
 
     #themeToggleBtn {
   display: block;
-  margin: 50px auto;
-  padding: 12px 20px;
-  font-size: 18px;
   cursor: pointer;
-  border: none;
-  background: #49250b;
-  color: gold;
-  border-radius: 8px;
+  border: 1px solid black;
   transition: 0.3s;
-}
+  background-color:#3e2c23 ; 
+  color:gold ;
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  padding-top: 3px;
+    }
+      
+
+
+
+
 
 #themeToggleBtn:hover {
-  transform: scale(1.05);
+  transform: scale(1.2);
+  color: whitesmoke ;
 }
 
 
@@ -544,20 +550,24 @@ ul{
 /*----------------------------------------------------------------------------------------------*/
 .theme2 #themeToggleBtn {
   display: block;
-  margin: 50px auto;
-  padding: 12px 20px;
-  font-size: 18px;
   cursor: pointer;
-  border: none;
-  background: #c9a24e;
-  color: #1e1b18;
-  border-radius: 8px;
+  background:#1e1b18;
+  color:#c9a24e  ;
+  border: 1px solid black;
   transition: 0.3s;
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  padding-top: 3px;
 }
 
+
 #themeToggleBtn:hover {
-  transform: scale(1.05);
+  transform: scale(1.2);
+      color: whitesmoke ;
 }
+
+
 
 
 
